--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,3 @@
-.container {
-  padding: 0 2rem;
-}
-
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -10,6 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-x: hidden;
 }
 
 .footer {
@@ -113,4 +110,48 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.global {
+  display: flex;
+  width: 100vw;
+  height: auto;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.subGlobal {
+  min-width: 300px;
+  height: 300px;
+  margin: 20px;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #3c3c3c;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.subGlobal div {
+}
+
+.icon {
+  width: 120px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  height: 120px;
+  background-color: beige;
+  border-radius: 10px;
+  padding:20px;
+  margin:10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
